Testes do backend ok, incluindo simplificacao de modelo JPA para que fique mais OO.